; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/host/extr_ehci-pci.c_ehci_pci_reinit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/host/extr_ehci-pci.c_ehci_pci_reinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ehci_hcd = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.pci_dev = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"MWI active\0A\00", align 1
@INTEL_QUARK_X1000_EHCI_MAX_THRESHOLD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ehci_hcd*, %struct.pci_dev*)* @ehci_pci_reinit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ehci_pci_reinit(%struct.ehci_hcd* %0, %struct.pci_dev* %1) #0 {
  %3 = alloca %struct.ehci_hcd*, align 8
  %4 = alloca %struct.pci_dev*, align 8
  %5 = alloca i32, align 4
  store %struct.ehci_hcd* %0, %struct.ehci_hcd** %3, align 8
  store %struct.pci_dev* %1, %struct.pci_dev** %4, align 8
  %6 = load %struct.pci_dev*, %struct.pci_dev** %4, align 8
  %7 = call i32 @pci_set_mwi(%struct.pci_dev* %6)
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %2
  %11 = load %struct.ehci_hcd*, %struct.ehci_hcd** %3, align 8
  %12 = call i32 @ehci_dbg(%struct.ehci_hcd* %11, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  br label %13

13:                                               ; preds = %10, %2
  %14 = load %struct.pci_dev*, %struct.pci_dev** %4, align 8
  %15 = call i64 @is_intel_quark_x1000(%struct.pci_dev* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %26

17:                                               ; preds = %13
  %18 = load %struct.ehci_hcd*, %struct.ehci_hcd** %3, align 8
  %19 = load i32, i32* @INTEL_QUARK_X1000_EHCI_MAX_THRESHOLD, align 4
  %20 = load %struct.ehci_hcd*, %struct.ehci_hcd** %3, align 8
  %21 = getelementptr inbounds %struct.ehci_hcd, %struct.ehci_hcd* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @ehci_writel(%struct.ehci_hcd* %18, i32 %19, i32 %24)
  br label %26

26:                                               ; preds = %17, %13
  ret i32 0
}

declare dso_local i32 @pci_set_mwi(%struct.pci_dev*) #1

declare dso_local i32 @ehci_dbg(%struct.ehci_hcd*, i8*) #1

declare dso_local i64 @is_intel_quark_x1000(%struct.pci_dev*) #1

declare dso_local i32 @ehci_writel(%struct.ehci_hcd*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
